[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/rpg-pack/props n decorations/generic-rpg-treasure-closed.png" type="Texture" id=1]
[ext_resource path="res://Static/Chest.gd" type="Script" id=2]
[ext_resource path="res://Assets/rpg-pack/props n decorations/generic-rpg-trasure-open.png" type="Texture" id=3]
[ext_resource path="res://Assets/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Extra/ChestLootUi.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 25, 21 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 25, 27 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.43098, 5.80928 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.73213
height = 8.56797

[sub_resource type="Animation" id=6]
resource_name = "LabelFloat"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.04539, -12.9288 ), Vector2( -5.04539, -14.9259 ), Vector2( -5.04539, -13.4543 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 4
font_data = ExtResource( 4 )

[node name="Chest" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="ChestSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.694488, -0.0992126 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.8147e-06, 0.114099 )
shape = SubResource( 4 )

[node name="Interact" type="Area2D" parent="."]
position = Vector2( -0.33371, -0.417137 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2( 0.310299, 9.75633 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LabelFloat = SubResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = -5.04539
margin_top = -12.9288
margin_right = 16.9546
margin_bottom = -3.92878
custom_fonts/font = SubResource( 7 )
text = "Press E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootUI" type="CanvasLayer" parent="."]
layer = 3

[node name="ChestLootUi" parent="LootUI" instance=ExtResource( 5 )]
position = Vector2( 75.9112, 20.1133 )
z_index = 1
z_as_relative = false

[connection signal="body_entered" from="Interact" to="." method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_Interact_body_exited"]
